infra/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: climate-health
  labels:
    name: climate-health
    environment: production
    app: climate-health-mapper
